--- a/Paginas_insumos/Formulario_Inventario_insumos.html
+++ b/Paginas_insumos/Formulario_Inventario_insumos.html
@@ -26,9 +26,10 @@
                 <input type="text" class="form-control" id="NombreIn" required>
             </div>
             <div class="col-md-4">
-                <label for="DescripcionIn" class="form-label">Fecha de ingreso</label>
+                <label for="DescripcionIn" class="form-label">Descripcion de insumo</label>
                 <input type="text" class="form-control" id="DescripcionIn" required>
             </div>
+            <!-- ---------------------------------------------------------------------------------------- -->
             <div class="col-4"></div>
             <div class="col-4" >
                 <input  onclick=""  type="button" class="btn btn-primary col-12" style="height: 50px;
