--- a/Paginas/Formulario_Detallado.html
+++ b/Paginas/Formulario_Detallado.html
@@ -32,7 +32,7 @@
             <div class="col-md-3">
                 <label for="TipoFD" class="form-label">Tipo de detallado</label>
                 <select id="TipoFD" class="form-select">
-                    <option selected>Dobles</option>
+                    <option selected>Doblez</option>
                     <option>Rolado</option>
                     <option>Bisel</option>
                     <option>Taladro</option>
@@ -40,10 +40,14 @@
                 </select>
             </div>
             <div class="col-md-3">
-                <label for="NoDisenoFD" class="form-label">Numero de orden</label>
-                <input type="text" class="form-control" id="NoDisenoFD" placeholder="Numero de orden" required>
+                <label for="OrdenCompraFD" class="form-label">Orden de compra</label>
+                <input type="text" class="form-control" id="OrdenCompraFD" placeholder="Orden de compra" required>
             </div>
             <!-- ---------------------------------------------------------------------------------------- -->
+            <div class="col-md-3">
+                <label for="noDisenoFD" class="form-label">Numero de diseño</label>
+                <input type="text" class="form-control" id="noDisenoFD" placeholder="Cantidad solicitada" required>
+            </div>
             <div class="col-md-3">
                 <label for="CantidadSoliFD" class="form-label">Cantidad solicitada</label>
                 <input type="text" class="form-control" id="CantidadSoliFD" placeholder="Cantidad solicitada" required>
@@ -55,8 +59,6 @@
             <div class="col-md-3">
                 <label for="HorasFD" class="form-label">Horas trabajadas</label>
                 <input type="text" class="form-control" id="HorasFD" placeholder="Horas trabajadas" required>
-            </div>
-            <div class="col-md-3">
             </div>
             <!-- ---------------------------------------------------------------------------------------- -->
             <div class="col-4"></div>
