--- a/Paginas/Formulario_Detallado.html
+++ b/Paginas/Formulario_Detallado.html
@@ -8,6 +8,9 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>Registro de almacen</title>
 
+    <script src="../alertify/alertify.js"></script>
+    <link rel="stylesheet" href="../alertify/alertify.css">
+
     <script src="../Script/Formularios_Js/FormsScripts.js"></script>
     <script src="../Script/jquery.js"></script>
     <script src="../Script/jquery-3.5.1.min.js"></script>
@@ -20,7 +23,7 @@
         <form id ="form_nuevoD" class="row g-4">
             <h2 style="text-align: center;">Detallado</h2>
             <div class="col-md-3">
-                <label for="FechaFD" class="form-label">Fecha de ingreso</label>
+                <label for="FechaFD" class="form-label">Fecha limite</label>
                 <input type="date" class="form-control"  id="FechaFD" required>
                 </select>
             </div>
@@ -63,7 +66,7 @@
             <!-- ---------------------------------------------------------------------------------------- -->
             <div class="col-4"></div>
             <div class="col-4" >
-                <input  onclick="return AgregarProcesoDetallado();"  type="button" class="btn btn-primary col-12" style="height: 50px;
+                <input  onclick="AgregarProcesoDetallado();"  type="button" class="btn btn-primary col-12" style="height: 50px;
                 min-height: auto; font-size: auto;" value="...">
             </div>
             <div class="col-4"></div>
