--- a/Paginas/Formulario_Detallado.html
+++ b/Paginas/Formulario_Detallado.html
@@ -28,6 +28,13 @@
                 </select>
             </div>
             <div class="col-md-3">
+                <label for="TurnoFD" class="form-label">Tipo de detallado</label>
+                <select id="TurnoFD" class="form-select">
+                    <option>Turno 1</option>
+                    <option>Turno 2</option>
+                </select>
+            </div>
+            <div class="col-md-3">
                 <label for="SupervisorFD" class="form-label">Encargado/Supervisor</label>
                 <input type="text" class="form-control" id="SupervisorFD" placeholder="" required>
             </div>
@@ -42,11 +49,12 @@
                     <option>Prensa</option>
                 </select>
             </div>
+            
+            <!-- ---------------------------------------------------------------------------------------- -->
             <div class="col-md-3">
                 <label for="OrdenCompraFD" class="form-label">Orden de compra</label>
                 <input type="text" class="form-control" id="OrdenCompraFD" placeholder="Orden de compra" required>
             </div>
-            <!-- ---------------------------------------------------------------------------------------- -->
             <div class="col-md-3">
                 <label for="noDisenoFD" class="form-label">Numero de diseño</label>
                 <input type="text" class="form-control" id="noDisenoFD" placeholder="Cantidad solicitada" required>
@@ -54,8 +62,6 @@
             <div class="col-md-3">
                 <label for="CantidadSoliFD" class="form-label">Cantidad solicitada</label>
                 <input type="text" class="form-control" id="CantidadSoliFD" placeholder="Cantidad solicitada" required>
-            </div>
-            <div class="col-md-3">
             </div>
             <div class="col-md-3">
             </div>
