--- a/Paginas/Formulario_Detallado.html
+++ b/Paginas/Formulario_Detallado.html
@@ -69,7 +69,7 @@
             <div class="col-4"></div>
             <div class="col-4" >
                 <input  onclick="AgregarProcesoDetallado();"  type="button" class="btn btn-primary col-12" style="height: 50px;
-                min-height: auto; font-size: auto;" value="...">
+                min-height: auto; font-size: auto;" value="Aceptar">
             </div>
             <div class="col-4"></div>
         </form>
