--- a/Paginas_insumos/Formulario_Inventario_insumos.html
+++ b/Paginas_insumos/Formulario_Inventario_insumos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="../Script/Formularios_Js/FormsScripts.js"></script>
+    <script src="../Script/Formularios_Js/ScriptsInsumos.js"></script>
     <script src="../Script/jquery.js"></script>
     <script src="../Script/jquery-3.5.1.min.js"></script>
     <title>Inventario</title>
@@ -31,13 +31,7 @@
             </div>
             <div class="col-md-3">
                 <label for="CategoriasInsumo" class="form-label">Categoria del insumo</label>
-                <select id="CategoriasInsumo" class="form-select">
-                    <option selected>Doblez</option>
-                    <option>Rolado</option>
-                    <option>Bisel</option>
-                    <option>Taladro</option>
-                    <option>Prensa</option>
-                </select>
+                <input type="text" class="form-control" id="CategoriasInsumo" required>
             </div>
             <!-- ---------------------------------------------------------------------------------------- -->
             <div class="col-4"></div>
