--- a/Paginas_insumos/Formulario_Inventario_insumos.html
+++ b/Paginas_insumos/Formulario_Inventario_insumos.html
@@ -22,6 +22,10 @@
                 <input type="text" class="form-control" id="NombreInsumo" required>
             </div>
             <div class="col-md-3">
+                <label for="IdentificadorInsumo" class="form-label">Identificador de insumo</label>
+                <input type="text" class="form-control" id="IdentificadorInsumo" required>
+            </div>
+            <div class="col-md-3">
                 <label for="DescripcionInsumo" class="form-label">Descripcion de insumo</label>
                 <input type="text" class="form-control" id="DescripcionInsumo" required>
             </div>
@@ -29,13 +33,12 @@
                 <label for="EspecificacionesInsumo" class="form-label">Especificacion de insumo</label>
                 <input type="text" class="form-control" id="EspecificacionesInsumo" required>
             </div>
-            <div class="col-md-3">
+            <!-- ---------------------------------------------------------------------------------------- -->
+            <div class="col-3">
                 <label for="CategoriasInsumo" class="form-label">Categoria del insumo</label>
                 <input type="text" class="form-control" id="CategoriasInsumo" required>
             </div>
-            <!-- ---------------------------------------------------------------------------------------- -->
-            <div class="col-4"></div>
-            <div class="col-4"></div>
+            <div class="col-5"></div>
             <div class="col-4"></div>
             <!-- ---------------------------------------------------------------------------------------- -->
             <div class="col-4"></div>
