--- a/Paginas_insumos/Formulario_Inventario_insumos.html
+++ b/Paginas_insumos/Formulario_Inventario_insumos.html
@@ -16,7 +16,7 @@
     <section class="d-flex justify-content-center" style="padding-left: 20px; padding-top: 20px; padding-bottom: 20px; padding-right: 20px;
         background-color: #d2dae6;  border-radius:10px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);">
         <form id="form_nuevoD" class="row g-4">
-            <h2 style="text-align: center;">Almacen chiquito</h2>
+            <h2 style="text-align: center;">Almacen de herramientas</h2>
             <div class="col-md-6">
                 <label for="NombreInsumo" class="form-label">Nombre de insumo</label>
                 <input type="text" class="form-control" id="NombreInsumo" required>
