--- a/Paginas_insumos/Formulario_Inventario_insumos.html
+++ b/Paginas_insumos/Formulario_Inventario_insumos.html
@@ -22,11 +22,11 @@
                 <input type="text" class="form-control" id="NombreInsumo" required>
             </div>
             <div class="col-md-6">
-                <label for="DescripcionInsumo" class="form-label">Descripcion de insumo</label>
+                <label for="DescripcionInsumo" class="form-label">Descripción de insumo</label>
                 <input type="text" class="form-control" id="DescripcionInsumo" required>
             </div>
             <div class="col-md-6">
-                <label for="EspecificacionesInsumo" class="form-label">Especificacion de insumo</label>
+                <label for="EspecificacionesInsumo" class="form-label">Especificación de insumo</label>
                 <input type="text" class="form-control" id="EspecificacionesInsumo" required>
             </div>
             <!-- ---------------------------------------------------------------------------------------- -->
