--- a/Paginas_insumos/Formulario_Inventario_insumos.html
+++ b/Paginas_insumos/Formulario_Inventario_insumos.html
@@ -15,7 +15,7 @@
 <body style="padding-left: 20px; padding-top: 20px; padding-bottom: 20px; padding-right: 20px;">
     <section class="d-flex justify-content-center" style="padding-left: 20px; padding-top: 20px; padding-bottom: 20px; padding-right: 20px;
         background-color: #d2dae6;  border-radius:10px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);">
-        <form id="form_nuevoD" class="row g-4">
+        <form id="form_nuevoInsumo" class="row g-4">
             <h2 style="text-align: center;">Almacen de herramientas</h2>
             <div class="col-md-4">
                 <label for="IdentificadorInsumo" class="form-label">Identificador de insumo</label>
