--- a/Paginas/Formulario_Orden.html
+++ b/Paginas/Formulario_Orden.html
@@ -53,7 +53,7 @@
             </div>
             <div class="col-4">
                 <label class="col-2"></label>
-                <input type="button" onclick="return AgregarOrden();" class="btn btn-primary col-8" style="width:auto; min-height: auto; font-size: auto;" value="Agregar orden">
+                <input type="button" onclick="AgregarOrden();" class="btn btn-primary col-8" style="width:auto; min-height: auto; font-size: auto;" value="Agregar orden">
                 <label class="col-2"></label>
             </div>
             <div class="col-4">
