--- a/Paginas/Formulario_Detallado.html
+++ b/Paginas/Formulario_Detallado.html
@@ -61,7 +61,7 @@
             </div>
             <div class="col-md-3">
                 <label for="CantidadSoliFD" class="form-label">Cantidad solicitada</label>
-                <input type="text" class="form-control" id="CantidadSoliFD" placeholder="Cantidad solicitada" required>
+                <input type="number" class="form-control" id="CantidadSoliFD" placeholder="Cantidad solicitada" required>
             </div>
             <div class="col-md-3">
             </div>
