--- a/Paginas/Formulario_Detallado.html
+++ b/Paginas/Formulario_Detallado.html
@@ -28,7 +28,7 @@
                 </select>
             </div>
             <div class="col-md-3">
-                <label for="TurnoFD" class="form-label">Tipo de detallado</label>
+                <label for="TurnoFD" class="form-label">Turno 1</label>
                 <select id="TurnoFD" class="form-select">
                     <option>Turno 1</option>
                     <option>Turno 2</option>
