--- a/Paginas/Formulario_Detallado.html
+++ b/Paginas/Formulario_Detallado.html
@@ -25,9 +25,10 @@
             <div class="col-md-3">
                 <label for="FechaFD" class="form-label">Fecha limite</label>
                 <input type="date" class="form-control"  id="FechaFD" required>
+                </select>
             </div>
             <div class="col-md-3">
-                <label for="TurnoFD" class="form-label">Turno</label>
+                <label for="TurnoFD" class="form-label">Tipo de detallado</label>
                 <select id="TurnoFD" class="form-select">
                     <option>Turno 1</option>
                     <option>Turno 2</option>
